# CPL-roulette-server

./: CMakeLists.txt
docs/json_format/: ACKNOWLEDGE_msg.json  GAME_BEGIN_msg.json  GAME_OVER_msg.json  GAME_STATE_msg.json  ITEM_ASSIGN_msg.json  ITEM_USE_msg.json  PHONE_RESULT.json  PLAYER_SHOOT_msg.json  PLAYER_STATE_msg.json  SHOOT_RESULT_msg.json
include/: Game.h  Pistol.h  Player.h  Server.h  game.h  network_controller.h  network_protocol.h  pistol.h  player.h  server.h
src/: Game.c  Pistol.c  Player.c  Server.c  game.c  main.c  network_controller.c  network_protocol.c  pistol.c  player.c  server.c
util/: socket.c  socket.h
